add a tiny bit of content.

--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
   </head>
   <body>
     <header>
-
+      hello aparna
     </header>
+
     <div role="main">
-
+      this is your website
     </div>
-    <footer>
 
+    <footer>
+      and it has a footer and everything
     </footer>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
