--- a/index.html
+++ b/index.html
@@ -33,7 +33,18 @@
     </header>
 
     <div role="main">
-      this is your website
+      <div class="silhouette">
+        A silhouette picture of Aparna jumping
+      </div>
+
+      <div class="abilities">
+        <div class="heading">Aparna's abilities</div>
+        <ul>
+          <li class="rubiks-cube">Can solve a Rubik's Cube!</li>
+          <li class="guitar">Plays the guitar!</li>
+          <li class="human-jukebox">Human jukebox! Can hum any song you name!</li>
+        </ul>
+      </div>
     </div>
 
     <footer>
