Qualify which guitar Aparna plays :)

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="heading">Aparna's abilities</div>
         <ul>
           <li class="rubiks-cube">Can solve a Rubik's Cube!</li>
-          <li class="guitar">Plays the guitar!</li>
+          <li class="guitar">Plays a Fender Stratocaster guitar!</li>
           <li class="human-jukebox">Human jukebox! Can hum any song you name!</li>
         </ul>
       </div>
