Begin styling for responsive design.

--- a/index.html
+++ b/index.html
@@ -18,37 +18,39 @@
     <script src="js/libs/modernizr-2.5.3.min.js"></script>
   </head>
   <body>
-    <header>
-      <div class="vcard">
-        <div class="fn n">
-          <h1>
-            <span class="given-name">Aparna</span>
-            <span class="family-name">Iyer</span>
-          </h1>
-          <h2>
-            <span class="job-title">Business Analyst</span>
-          </h2>
+    <div class="container">
+      <header>
+        <div class="vcard">
+          <div class="fn n">
+            <h1>
+              <div class="given-name">Aparna</div>
+              <div class="family-name">Iyer</div>
+            </h1>
+            <h2>
+              <span class="job-title">Business Analyst</span>
+            </h2>
+          </div>
+        </div>
+      </header>
+
+      <div role="main">
+        <div class="silhouette">
+          A silhouette picture of Aparna jumping
+        </div>
+
+        <div class="abilities">
+          <div class="heading">Aparna's abilities</div>
+          <ul>
+            <li class="rubiks-cube">Can solve a Rubik's Cube!</li>
+            <li class="guitar">Plays a Fender Stratocaster guitar!</li>
+            <li class="human-jukebox">Human jukebox! Can hum any song you name!</li>
+          </ul>
         </div>
       </div>
-    </header>
 
-    <div role="main">
-      <div class="silhouette">
-        A silhouette picture of Aparna jumping
-      </div>
-
-      <div class="abilities">
-        <div class="heading">Aparna's abilities</div>
-        <ul>
-          <li class="rubiks-cube">Can solve a Rubik's Cube!</li>
-          <li class="guitar">Plays a Fender Stratocaster guitar!</li>
-          <li class="human-jukebox">Human jukebox! Can hum any song you name!</li>
-        </ul>
-      </div>
+      <footer>
+      </footer>
     </div>
-
-    <footer>
-    </footer>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.2.min.js"><\/script>')</script>
