--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta name="viewport" content="width=device-width">
 
     <link rel="stylesheet" href="css/style.css">
+    <link href='http://fonts.googleapis.com/css?family=Bitter:700' rel='stylesheet' type='text/css'>
 
     <script src="js/libs/modernizr-2.5.3.min.js"></script>
   </head>
