--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <div class="family-name">Iyer</div>
             </h1>
             <h2>
-              <span class="job-title">Business Analyst</span>
+              <div class="job-title">Business&nbsp;Analyst</div>
             </h2>
           </div>
         </div>
