--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
               <div class="given-name">Aparna</div>
               <div class="family-name">Iyer</div>
             </h1>
-            <h2>
-              <div class="job-title">Business&nbsp;Analyst</div>
-            </h2>
+            <h2 class="job-title">Business<br>Analyst</h2>
           </div>
         </div>
       </header>
