Mobile and desktop breakpoints.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <div class="given-name">Aparna</div>
               <div class="family-name">Iyer</div>
             </h1>
-            <h2 class="job-title">Business<br>Analyst</h2>
+            <h2 class="job-title">Business Analyst</h2>
           </div>
         </div>
       </header>
