--- a/index.html
+++ b/index.html
@@ -40,7 +40,13 @@
         <div class="abilities">
           <div class="heading">Aparna's abilities</div>
           <ul>
-            <li class="rubiks-cube">Can solve a Rubik's Cube!</li>
+            <li class="rubiks-cube">
+              <div class="square square1"></div>
+              <div class="square square2"></div>
+              <div class="square square3"></div>
+              <div class="square square4"></div>
+              <div class="caption">Can solve a Rubik's Cube!</div>
+            </li>
             <li class="guitar">Plays a Fender Stratocaster guitar!</li>
             <li class="human-jukebox">Human jukebox! Can hum any song you name!</li>
           </ul>
