Whoops, need this for the starbursts too.

--- a/index.html
+++ b/index.html
@@ -47,8 +47,20 @@
               <div class="square square4"></div>
               <div class="caption">Can solve a Rubik's Cube!</div>
             </li>
-            <li class="guitar">Plays a Fender Stratocaster guitar!</li>
-            <li class="human-jukebox">Human jukebox! Can hum any song you name!</li>
+            <li class="guitar">
+              <div class="square square1"></div>
+              <div class="square square2"></div>
+              <div class="square square3"></div>
+              <div class="square square4"></div>
+              <div class="caption">Plays a Fender Stratocaster guitar!</div>
+            </li>
+            <li class="human-jukebox">
+              <div class="square square1"></div>
+              <div class="square square2"></div>
+              <div class="square square3"></div>
+              <div class="square square4"></div>
+              <div class="caption">Human jukebox! Can hum any song you name!</div>
+            </li>
           </ul>
         </div>
       </div>
