--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         </div>
       </header>
 
-      <div role="main">
+      <div class="main" role="main">
         <div class="silhouette">
-          A silhouette picture of Aparna jumping
+          <img src="img/silhouette.png" alt="">
         </div>
 
         <div class="abilities">
