Add sample images for the abilities callouts.
Styled for mobile view only.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
               <div class="square square2"></div>
               <div class="square square3"></div>
               <div class="square square4"></div>
+              <img src="img/rubiks-cube.png">
               <div class="caption">Can solve a Rubik's Cube!</div>
             </li>
             <li class="guitar">
@@ -52,6 +53,7 @@
               <div class="square square2"></div>
               <div class="square square3"></div>
               <div class="square square4"></div>
+              <img src="img/guitar.png">
               <div class="caption">Plays a Fender Stratocaster guitar!</div>
             </li>
             <li class="human-jukebox">
@@ -59,7 +61,8 @@
               <div class="square square2"></div>
               <div class="square square3"></div>
               <div class="square square4"></div>
-              <div class="caption">Human jukebox! Can hum any song you name!</div>
+              <img src="img/human-jukebox.png">
+              <div class="caption">Human jukebox! Can hum any song!</div>
             </li>
           </ul>
         </div>
