Use a different rubik's cube image.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <div class="square square2"></div>
               <div class="square square3"></div>
               <div class="square square4"></div>
-              <img src="img/rubiks-cube.png">
+              <img src="img/rubiks-cube-2d.png">
               <div class="caption">Can solve a Rubik's Cube!</div>
             </li>
             <li class="guitar">
